--- a/src/input/styles.css
+++ b/src/input/styles.css
@@ -3,7 +3,8 @@
 -----------*/
 .input {
   display: block;
-  padding: 0.25rem 0.5rem;
+  width: 15rem;
+  padding: 0.25rem 0.75rem;
   border: 1px solid var(--grey-tint-2);
   outline: none;
   transition: all 200ms;
