--- a/src/table/styles.css
+++ b/src/table/styles.css
@@ -1,6 +1,10 @@
 /*-----------
     Table
 -----------*/
+.sk-table-container {
+  overflow-x: auto;
+}
+
 .table {
   width: 100%;
   border-collapse: collapse;
