--- a/src/modal/styles.css
+++ b/src/modal/styles.css
@@ -1,4 +1,4 @@
-.modal {
+.sk-modal {
   display: flex;
   position: fixed;
   top: 0;
@@ -9,22 +9,17 @@
   z-index: 50;
 }
 
-.modal > .container {
+.sk-modal-container {
   display: flex;
   justify-content: center;
   flex-direction: row;
   position: relative;
+  width: 100%;
   margin-top: 2rem;
 }
 
-.modal > .container > .close-button {
+.sk-modal-close-button {
   position: absolute;
   right: 0;
-  margin-right: 1rem;
-}
-
-.modal > .container > .section {
-  margin-top: 2rem;
-  margin-left: 1rem;
   margin-right: 1rem;
 }
