CSS comment consistency

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,4 @@
-/*----------------------
-    shirakami-ui.css
-----------------------*/
+/*--  shirakami  --*/
 :root {
   --white: hsl(0, 0%, 100%);
   --light: hsl(0, 0%, 93%);
