--- a/src/styles.css
+++ b/src/styles.css
@@ -33,12 +33,15 @@
 ::after,
 ::before {
   border: none;
+  box-sizing: border-box;
 }
 
 html {
+  font-family: 'oxygen', sans-serif;
   font-size: 16px;
   color: var(--grey-shade-3);
   line-height: 1;
+  word-break: break-word;
 }
 
 body {
