--- a/src/section/styles.css
+++ b/src/section/styles.css
@@ -1,15 +1,28 @@
 /*--  Section  --*/
 .sk-section {
-  padding-bottom: 1rem;
+  position: relative;
+  margin: 2rem 0;
+}
+
+.sk-section::before {
+  content: '';
+  position: absolute;
+  top: 0.8rem;
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--blue-shade-1);
+  z-index: -1;
 }
 
 .sk-section-title {
-  margin: 0;
-  padding-bottom: 1rem;
+  display: inline-block;
+  margin: 0 0 0 0.5rem;
+  padding: 0 0.5rem 1rem 0.5rem;
+  background-color: #ffffff;
 }
 
 .sk-section-item {
-  padding-left: 1rem;
+  padding-left: 2rem;
   padding-bottom: 1rem;
 }
 
