--- a/src/button/styles.css
+++ b/src/button/styles.css
@@ -116,3 +116,11 @@
   background-color: rgba(0, 0, 0, 0);
   border-color: rgba(0, 0, 0, 0);
 }
+
+/*-- Disabled --*/
+.sk-button:disabled {
+  border: 2px solid var(--grey);
+  background-color: var(--grey);
+  color: var(--white);
+  cursor: not-allowed;
+}
