--- a/src/table/styles.css
+++ b/src/table/styles.css
@@ -11,6 +11,7 @@
   display: block;
   width: 100%;
   border-collapse: collapse;
+  background-color: rgba(255, 255, 255, 80%);
 }
 
 /*--  Row  --*/
