--- a/src/section/styles.css
+++ b/src/section/styles.css
@@ -11,6 +11,7 @@
   width: 100%;
   height: 100%;
   border: 1px solid var(--blue-shade-1);
+  background-color: rgba(255, 255, 255, 80%);
   z-index: -1;
 }
 
