--- a/src/input/styles.css
+++ b/src/input/styles.css
@@ -14,3 +14,8 @@
   background-color: var(--light);
   transition: all 200ms ease;
 }
+
+.sk-number {
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+}
