Add required property for field

--- a/src/field/styles.css
+++ b/src/field/styles.css
@@ -16,3 +16,8 @@
   font-size: 0.85rem;
   color: var(--red-shade-1);
 }
+
+.sk-field-required {
+  color: var(--red-shade-1);
+  font-size: 1rem;
+}
